fix alignment issue

--- a/extension/components/visibility-level/local-visibility.css
+++ b/extension/components/visibility-level/local-visibility.css
@@ -10,6 +10,10 @@ div.gs_r {
 
 }
 
+div.gs_ri {
+    min-width: 712px;
+}
+
 /* div.gs_or_ggsm {
     display: none;
     width: 0;
